Release 1.7

#78 Split link-move into a multi-module Maven project, with specialized extractors in submodules
#83 Support untyped predicates in JSONPath queries
#84 BigIntNormalizer must handle String values
#86 XmlExtractor should treat attribute's source name as XPath expression
#87 JsonExtractor should treat attribute's source name as JsonPath expression
#88 JdbcNormalizer for SQL Integer
#89 Implement parent access in JsonPath
#90 Include deleted count into report
#91 Similar decimal values cause db update
#92 Use target's Java type to normalize sources
#93 Boolean normalizer (sync integers to booleans without updates)
#94 Do not create TargetToOnePropertyWriter for the master side of a to-one relationship
#95 Switch to Commons CSV parser
#97 Split CSV module out of LM core
#99 Logging API cleanup

Release 1.6

#35 Long / Integer values in HashMap keys
#55 DeleteTask - a new callback between getting source keys and matching them against targets
#64 Allow mapping source columns to non-persistent target properties
#73 Reloadable extractors do not reload
#75 JSON extractor
#79 Upgrade to Cayenne 4.0.M3
#80 Start making releases to Maven central
#81 Remove methods deprecated since 1.4 or earlier

Release 1.5

#56 Support for non printable delimiter characters in CSV extractor
#59 Transient target path support
#61 Delete task @AfterTargetsMapped listener is missing

Release 1.4

 #1 XML extractor support
#36 CSV extractors
#41 Automatic mapping of row attributes
#42 Multi-extractor configs
#43 Deprecate/remove explicit relationship mapping from CreateOrUpdateBuilder
#44 Straighten mapping by ID
#46 Cayenne upgrade to 4.0.M3.debfa94
#49 Matchers must handle expression invariants in Rows
#50 XML Schema for extractor configs
#51 Normalize 'sources' map keys
#52 Descriptor versioning
#53 FileExtractorModelLoader - a file-based IExtractorModelLoader
#54 Rename LinkETL to LinkMove

Release 1.3 2015-04-09

#23 Support for "delete" of targets missing in the source